--- a/test-os-ms/src/main/resources/application.properties
+++ b/test-os-ms/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+server.servlet.context-path=/test-os-ms
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-logging.level.org.springframework=INFO
+logging.level.org.springframework=${loglevel}
 
 #server.port=${server.port}
 #spring.datasource.url=${jdbc.url}
@@ -16,7 +17,7 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force-response=true
 server.port=8080
 server.error.include-exception=true
-spring.datasource.url=jdbc:mysql://3.74.73.134:3306/film_academy
+spring.datasource.url=jdbc:mysql://3.74.73.134:3306/geo_academy
 spring.datasource.username=academy
 spring.datasource.password=Neotech01!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
