--- a/test-os-ms/src/main/resources/application.properties
+++ b/test-os-ms/src/main/resources/application.properties
@@ -17,8 +17,8 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force-response=true
 server.port=8080
 server.error.include-exception=true
-spring.datasource.url=jdbc:mysql://3.74.73.134:3306/geo_academy
-spring.datasource.username=academy
+spring.datasource.url=${jdbcUrl}
+spring.datasource.username=neotech
 spring.datasource.password=Neotech01!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.auto-commit=true
