--- a/MS_Hibernate/pom.xml
+++ b/MS_Hibernate/pom.xml
@@ -55,11 +55,11 @@
 			<version>6.1.6.Final</version>
 			<type>pom</type>
 		</dependency>
-		<dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer</artifactId>
-			<version>5.5.1</version>
-		</dependency>
+<dependency>
+  <groupId>org.modelmapper</groupId>
+  <artifactId>modelmapper</artifactId>
+  <version>3.0.0</version>
+</dependency>
 
 	</dependencies>
 
